--- a/config.toml
+++ b/config.toml
@@ -77,62 +77,15 @@ engine_workers = 44              # Set to vCPU count (c3-standard-44 = 44 vCPUs)
 # -----------------------------------------------------------------------------
 
 # =============================================================================
-# pd-balanced (baseline)
+# Golden Snapshot Configuration
 # =============================================================================
-
-[[vm]]
-name = "op-reth-c3-standard-44-pd-balanced"
-# Uses all defaults: pd-balanced, TDX, 44 workers, 16GB cache
-
-[[vm]]
-name = "op-reth-c3-standard-44-pd-balanced-notdx"
-confidential_compute = false
-
-# [[vm]]
-# name = "op-reth-c3-standard-176-pd-balanced"
-# machine_type = "c3-standard-176"
-# storage_type = "pd-balanced"
-# engine_cache_mb = 65536
-# engine_workers = 176
-
-# [[vm]]
-# name = "op-reth-c3-standard-176-pd-balanced-notdx"
-# machine_type = "c3-standard-176"
-# storage_type = "pd-balanced"
-# engine_cache_mb = 65536
-# engine_workers = 176
-# confidential_compute = false
-
+# Pre-extracted snapshot for fast VM provisioning. Created from a synced VM.
+# New VMs create their data disk from this snapshot (~10-15 min).
+# For LSSD machines, the snapshot is copied to local NVMe via rsync.
 # =============================================================================
-# pd-ssd (faster random I/O)
-# =============================================================================
-
-[[vm]]
-name = "op-reth-c3-standard-44-pd-ssd"
-storage_type = "pd-ssd"
-
-[[vm]]
-name = "op-reth-c3-standard-44-pd-ssd-notdx"
-storage_type = "pd-ssd"
-confidential_compute = false
-
-# =============================================================================
-# hyperdisk-extreme (highest performance persistent disk)
-# =============================================================================
-
-# NOTE: hyperdisk-extreme not supported on c3-standard-44, needs larger machine type
-# [[vm]]
-# name = "op-reth-c3-standard-44-hyperdisk"
-# storage_type = "hyperdisk-extreme"
-# provisioned_iops = 350000
-# provisioned_throughput = 5000
-
-# [[vm]]
-# name = "op-reth-c3-standard-44-hyperdisk-notdx"
-# storage_type = "hyperdisk-extreme"
-# provisioned_iops = 350000
-# provisioned_throughput = 5000
-# confidential_compute = false
+[snapshot]
+name = "op-reth-golden-2026-01-28-23-14"
+disk_size_gb = 12000  # 12 TB target disk size
 
 # =============================================================================
 # LSSD (local NVMe SSDs - highest performance, 176 vCPUs)
