Add system tuning, reth.toml config, and split dashboards
Key changes:
- Add system_tuning Ansible role (sysctl, I/O scheduler, THP, mount opts)
- Add reth.toml template with 10K batch size for better ETA visibility
- Split Cloud Monitoring into two dashboards (overview + detailed v1)
- Fix log-based metric to use DELTA instead of unsupported GAUGE type
- Remove --db.max-size flag (caused MDBX_TOO_LARGE on smaller VMs)
- Remove expensive stat task on 5TB database file (was computing SHA1)
- Add reth_config variables flow from config.toml through Terraform
- Remove orphaned download_disk outputs from Terraform
- Fix snapshot disk_size_gb to match golden snapshot (15TB)
- Increase configure.yaml timeout to 6 hours

--- a/ansible/playbooks/site.yml
+++ b/ansible/playbooks/site.yml
@@ -5,7 +5,9 @@
 # Configures the benchmark VM with all required components:
 # - Common packages and user setup
 # - GCP Ops Agent for metrics
+# - System tuning (sysctl, I/O scheduler, THP, mount options)
 # - Install op-reth and op-node (binaries + systemd units)
+# - Deploy reth.toml configuration
 # - For LSSD machines: copy data from temp snapshot disk via rsync
 # - For persistent disks: data is already present (created from snapshot)
 # - Start op-reth and op-node services
@@ -27,14 +29,14 @@
       shell: while fuser /var/lib/dpkg/lock-frontend >/dev/null 2>&1; do sleep 5; done
       changed_when: false
 
-    - name: Check if database already exists
-      stat:
-        path: "{{ mount_point }}/op-reth/db/mdbx.dat"
-      register: reth_db_exists
+    # NOTE: Removed stat task that was computing SHA1 checksum of 5TB database file
+    # The task registered reth_db_exists but it was never used anywhere
+    # If needed in future, use: stat: path=... get_checksum=no get_mime=no
 
   roles:
     - common
     - ops_agent
+    - system_tuning
     - role: op_reth
       vars:
         start_services: false
