--- a/config.toml
+++ b/config.toml
@@ -76,6 +76,28 @@ engine_workers = 44              # Set to vCPU count (c3-standard-44 = 44 vCPUs)
 # All optional fields inherit from [defaults.vm] if not specified.
 # -----------------------------------------------------------------------------
 
+[[vm]]
+name = "op-reth-c3-standard-44-pd-balanced-with-tdx"
+confidential_compute = true
+
+[[vm]]
+name = "op-reth-c3-standard-44-pd-balanced-no-tdx"
+confidential_compute = false
+
+# =============================================================================
+# Reth Configuration (Performance Tuning)
+# =============================================================================
+# Controls execution batch size for checkpoint frequency.
+# Smaller batches = more frequent checkpoint updates = better ETA visibility.
+# Trade-off: ~10-15% slower total sync vs 500K default.
+# See docs/PERFORMANCE-TUNING.md for detailed explanations.
+# =============================================================================
+[reth_config]
+batch_size = 10000              # Blocks per execution batch (default: 500000)
+batch_duration = "1m"           # Max duration per batch (default: 10m)
+db_max_size_gb = 15000          # Maximum database size (15TB)
+db_growth_step_mb = 4096        # Database growth increment (4GB)
+
 # =============================================================================
 # Golden Snapshot Configuration
 # =============================================================================
@@ -85,23 +107,28 @@ engine_workers = 44              # Set to vCPU count (c3-standard-44 = 44 vCPUs)
 # =============================================================================
 [snapshot]
 name = "op-reth-golden-2026-01-28-23-14"
-disk_size_gb = 12000  # 12 TB target disk size
+disk_size_gb = 15000  # Must be >= snapshot source disk size (15TB)
 
 # =============================================================================
-# LSSD (local NVMe SSDs - highest performance, 176 vCPUs)
+# ORPHANED VMs (NOT in Terraform state - manage via gcloud CLI)
 # =============================================================================
-# 176 vCPUs, 704GB RAM, 12TB local SSD (32x375GB RAID-0)
-# No storage_type or disk_size_gb needed - LSSD provides built-in local SSDs
+# These VMs were removed from Terraform state but are still running in GCP.
+# They are NOT managed by Terraform - do NOT uncomment or they will conflict.
+#
+# To check status: gcloud compute instances describe <name> --zone=us-central1-a
+# To delete: gcloud compute instances delete <name> --zone=us-central1-a
+# To SSH: gcloud compute ssh <name> --zone=us-central1-a
+# =============================================================================
 
-[[vm]]
-name = "op-reth-c3-standard-176-lssd"
-machine_type = "c3-standard-176-lssd"
-engine_cache_mb = 65536          # 64GB cross-block cache (704GB RAM available)
-engine_workers = 176             # 176 vCPUs
+# [[vm]]
+# name = "op-reth-c3-standard-176-lssd"
+# machine_type = "c3-standard-176-lssd"
+# engine_cache_mb = 65536          # 64GB cross-block cache (704GB RAM available)
+# engine_workers = 176             # 176 vCPUs
 
-[[vm]]
-name = "op-reth-c3-standard-176-lssd-notdx"
-machine_type = "c3-standard-176-lssd"
-confidential_compute = false
-engine_cache_mb = 65536
-engine_workers = 176
+# [[vm]]
+# name = "op-reth-c3-standard-176-lssd-notdx"
+# machine_type = "c3-standard-176-lssd"
+# confidential_compute = false
+# engine_cache_mb = 65536
+# engine_workers = 176
