Add automatic inventory generation and sync status dashboard
- Add generate-inventory step to provision.yaml that auto-generates
  Ansible inventory.json from config.toml and VM IPs
- Update configure.yaml and run.yaml to use JSON inventory format
- Add chain_network field to config.toml for blockchain network name
- Add recursive chown for snapshot-based disks (pd-ssd, pd-balanced)
- Add sync status dashboard with log-based metrics to monitoring
- Add two new c3-standard-22 pd-ssd VMs (TDX and non-TDX variants)
- Remove old Terraform inventory generation code
- Update ansible.cfg default inventory path to .json

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = inventory/hosts.yml
+inventory = inventory/hosts.json
 roles_path = roles
 host_key_checking = False
 stdout_callback = yaml
