Fix LSSD copy ownership issue
Add recursive chown step after tar extraction to fix permission denied
error when op-reth tries to write to database files. The tar command
extracts files as root (with --no-same-owner), but the database lock
and version files need to be owned by reth:reth for the service to start.

--- a/ansible/roles/lssd_copy/tasks/main.yml
+++ b/ansible/roles/lssd_copy/tasks/main.yml
@@ -106,6 +106,13 @@
       debug:
         msg: "mdbx.dat copy completed successfully"
 
+    # Fix ownership for all files (tar extracts as root with --no-same-owner)
+    - name: Fix ownership of all copied files
+      shell: |
+        chown -R {{ service_user }}:{{ service_group }} {{ mount_point }}/op-reth
+        chown -R {{ service_user }}:{{ service_group }} {{ mount_point }}/op-node
+      changed_when: true
+
     - name: Unmount snapshot disk
       mount:
         path: "{{ snapshot_mount_point }}"
