Fix LSSD fstab boot issue: use ephemeral mounts, reorder roles
- lssd_copy: Use state=ephemeral to mount without fstab entry
- lssd_copy: Use state=absent to unmount AND remove fstab entry
- lssd_copy: Add rescue block to clean up fstab on failure
- site.yml: Move lssd_copy role before op_reth (data must exist first)
- AGENTS.md: Add gotcha #12 about LSSD mount state

--- a/ansible/playbooks/site.yml
+++ b/ansible/playbooks/site.yml
@@ -38,11 +38,12 @@
     - common
     - ops_agent
     - system_tuning
-    - op_reth
-    - op_node
-    # LSSD machines need to copy data from temp snapshot disk
+    # LSSD machines need to copy data from temp snapshot disk BEFORE service setup
+    # This must run before op_reth so data is in place when the service is configured
     - role: lssd_copy
       when: is_lssd_machine | default(false)
+    - op_reth
+    - op_node
 
   post_tasks:
     # Fix ownership of data directories before starting services
